[gd_scene load_steps=7 format=3 uid="uid://d3xcouh3ikrm0"]

[ext_resource type="Texture2D" uid="uid://ds0pot0frf2ck" path="res://assets/pipe.png" id="1_8x3ej"]
[ext_resource type="Script" uid="uid://ceirq5vjhv5po" path="res://scripts/pipe.gd" id="1_arpqm"]
[ext_resource type="AudioStream" uid="uid://c132xx3s4r3ys" path="res://assets/ding.mp3" id="3_8p0di"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_arpqm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_arpqm"]
size = Vector2(128, 600)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8p0di"]
size = Vector2(128, 600)

[node name="Pipes" type="Area2D"]
z_index = 5
z_as_relative = false
script = ExtResource("1_arpqm")

[node name="scoringArea" type="CollisionShape2D" parent="."]
position = Vector2(128, 0)
rotation = -1.5708
shape = SubResource("WorldBoundaryShape2D_arpqm")

[node name="bottomPipe" type="Area2D" parent="."]

[node name="bottomPipeSprite" type="Sprite2D" parent="bottomPipe"]
texture = ExtResource("1_8x3ej")
offset = Vector2(0, 250)

[node name="bottomCollision" type="CollisionShape2D" parent="bottomPipe"]
position = Vector2(0, 429)
shape = SubResource("RectangleShape2D_arpqm")

[node name="topPipe" type="Area2D" parent="."]

[node name="topPipeSprite" type="Sprite2D" parent="topPipe"]
texture = ExtResource("1_8x3ej")
offset = Vector2(0, -250)
flip_v = true

[node name="topCollision" type="CollisionShape2D" parent="topPipe"]
position = Vector2(1, -433)
shape = SubResource("RectangleShape2D_8p0di")

[node name="scoreDing" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_8p0di")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="bottomPipe" to="." method="_on_bottom_pipe_body_entered"]
[connection signal="body_entered" from="topPipe" to="." method="_on_top_pipe_body_entered"]
